# Cplusplus-Exercises

./: ArrayExercise1.hpp  CMakeLists.txt  Cplusplus-Exercises - Ярлык.lnk  Main.cpp  Makefile
build-cmake/: CMakeCache.txt
test/: CMakeLists.txt  MainTests.cpp
